jlink+jpos+ debian:bookworm-slim as base runner image